--- a/clock.css
+++ b/clock.css
@@ -1,43 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-* 
-{ 
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-:root
-{
+
+:root {
     --primary-color: #f6f7fb;
     --white-color: #fff;
     --black-color: #18191a;
     --red-color: #e74c3c;
 }
-body
-{
+
+body {
     display: flex;
     min-height: 100vh;
     align-items: center;
     justify-content: center;
     background: var(--primary-color);
 }
-body .dark
-{
+
+body .dark {
     --primary-color: #242526;
     --white-color: #18191a;
     --black-color: #fff;
     --red-color: #e74c3c;
 }
-.conatiner
-{
+
+.container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 60px;
+    gap: 20px;
 }
-.conatiner .clock
-{
+
+.container .clock {
     display: flex;
     height: 400px;
     width: 400px;
@@ -48,31 +47,35 @@ body .dark
     box-shadow: 0 15px 25px rgba(0, 0, 0, 0), 0 25px 45px rgba(0, 0, 0, 0);
     position: relative;
 }
-.clock label
-{
+
+.container .clock label {
     position: absolute;
     inset: 20px;
     text-align: center;
     transform: rotate(calc(var(--i) * (360deg / 12)));
 }
-.clock label span
-{
+
+.container .clock label span {
     display: inline-block;
     font-size: 30px;
     font-weight: 600;
     color: var(--black-color);
     transform: rotate(calc(var(--i) * (-360deg / 12)));
 }
-.conatiner .indicator
-{
+
+.clock {
+    margin-bottom: 20px;
+}
+
+.container .indicator {
     position: absolute;
     height: 10px;
     width: 10px;
     display: flex;
     justify-content: center;
 }
-.indicator::before
-{
+
+.indicator::before {
     content: "";
     position: absolute;
     height: 100%;
@@ -82,8 +85,8 @@ body .dark
     background: var(--black-color);
     border: 4px solid var(--red-color);
 }
-.indicator .hand
-{
+
+.indicator .hand {
     position: absolute;
     height: 130px;
     width: 4px;
@@ -92,26 +95,45 @@ body .dark
     transform-origin: bottom;
     background: var(--red-color);
 }
-.hand .minute
-{
+
+.hand .minute {
     height: 120px;
     width: 5px;
     background: var(--black-color);
 }
-.hand .hour
-{
+
+.hand .hour {
     height: 100px;
     width: 8px;
     background: var(--black-color);
 }
-.mode-switch
-{
+
+.mode-switch {
+    /*margin: 20px;*/
     padding: 10px 20px;
     border-radius: 8px;
     font-size: 22px;
     font-weight: 400;
-    display: inline-block;
-    color: var(--white-color);
+    display: inline-table;
+    color: var(--black-color);
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
     cursor: pointer;
+}
+
+.dark .clock {
+    background: var(--black-color);
+}
+
+.dark .clock label span {
+    color: var(--white-color);
+}
+
+.dark .indicator::before {
+    background: var(--white-color);
+    border-color: var(--black-color);
+}
+
+.dark .mode-switch {
+    background: var(--black-color);
+    color: var(--white-color);
 }
